figue/tests/integration/snapshots/main__integration__err__error_missing_value_for_argument_short_missed.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "-v" as usize
   ╭─[ <cli>:1:4 ]
   │
 1 │ -j -v
   │    ─┬  
   │     ╰── failed to parse "-v" as usize
───╯
